# queberry

./: .gitignore  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
documentation/Indexers/: indexer manifest template.md  indexer returns template.md  indexer_manifest_template.md  indexer_returns_template.md
documentation/resolvers/: resolver_manifest_template.md  resolver_returns_template.md
documentation/utility/: utility_manifest_template.md  utility_returns_template.md
mpv/: mpv.conf
src/: app.css  app.d.ts  hooks.client.ts
src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  constants.rs  errors.rs  lib.rs  state.rs
src-tauri/src/api/: api_client.rs  mod.rs  types.rs
src-tauri/src/commands/: api.rs  app.rs  avatars.rs  db.rs  downloads.rs  mod.rs  plugin.rs  video.rs
src-tauri/src/db/: blacklist.rs  content_ratings.rs  downloads.rs  global_settings.rs  init_db.rs  keyboard_shortcuts.rs  keys.rs  local_media.rs  mod.rs  plugin_cache.rs  settings.rs  sqlite.rs  transfers.rs  types.rs  user.rs
src-tauri/src/downloads/: manager.rs  types.rs
src-tauri/src/plugin_system/: init_plugins.rs  loader.rs  manager.rs  mod.rs  plugin_manager.rs  rate_limiter.rs  runtime.rs  types.rs
src-tauri/src/utils/: avatar_dir.rs  db_dir.rs  language.rs  mod.rs  mpv_dir.rs  plugin_dir.rs
src-tauri/src/video_player/: audio.rs  config.rs  events.rs  mod.rs  player.rs  shaders.rs  subtitles.rs  tracker.rs  types.rs  utils.rs
src-tauri/src/video_player/linux/: utils.rs
src-tauri/src/video_player/macos/: utils.rs
src-tauri/src/video_player/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/video_player/windows/: player.rs  utils.rs
src/lib/: index.ts
src/lib/components/Header/: Header.svelte  HeaderButton.svelte  HeaderLink.svelte
src/lib/components/bars/: DetailsSideBar.svelte  DragBar.svelte  GridViewSideBar.svelte  NavSideBar.svelte  SourcesSideBar.svelte
src/lib/components/cards/: CarouselCard.svelte  CastCard.svelte  DownloadCard.svelte  EpisodeCard.svelte  GridViewMediaCard.svelte  RatingCard.svelte  RequestCard.svelte  SearchResultCard.svelte  SourceCard.svelte  TransferCard.svelte
src/lib/components/forms/: LoginUserForm.svelte  RegisterUserForm.svelte  UpdateUserForm.svelte
src/lib/components/inputs/: AvatarSelection.svelte  (+32 more)
src/lib/db/: fetchCollections.ts  fetchData.ts  fetchMediaItem.ts  fetchPersonDetails.ts  fetchRandom.ts  fetchRecentReleases.ts  fetchRelatedMedia.ts  fetchSeasons.ts  fetchTrending.ts  fetchUpNext.ts
src/lib/stores/: app.ts  errorHandling.ts  pages.ts  plugins.ts  user.ts  video.ts
src/routes/: +error.svelte  +layout.svelte
src/routes/(home)/: +page.svelte
src/routes/add/: +page.svelte
src/routes/details/: +page.svelte  +page.ts
src/routes/discover/: +page.svelte  +page.ts
src/routes/downloads/: +page.svelte
src/routes/favourites/: +page.svelte  +page.ts
src/routes/lists/: +page.svelte
src/routes/person/: +page.svelte  +page.ts
src/routes/pluginList/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/transfers/: +page.svelte
src/routes/video/: +page.svelte
src/routes/watchlist/: +page.svelte  +page.ts
(+113 files in other folders)
