[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
strum = { version = "0.27", features = ["derive"] }
wasmtime = "40.0"
extism = "1.13"
url = "2.5"
thiserror = "2.0"
dashmap = "6.1"
psl = "2.1"
regex = "1.12"
libmpv2 = "5.0"
anyhow = "1.0"
raw-window-handle = "0.6"  
tokio = { version = "1.49", features = ["full"] }
dirs = "5.0"  

[dev-dependencies]
tempfile = "3.3"
rand = "0.9.2"
mockall = "0.14"
