[package]
name = "queberry"
version = "0.85.2"
description = "A Media App"
authors = ["naughtaught"]
license = ""
repository = "https://github.com/naughtaught/queberry"
edition = "2021"
rust-version = "1.77.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
backtrace = "0.3"
bcrypt = "0.19"
chrono = "0.4"
dirs = "6.0"  
dashmap = "6.1"
extism = "1.13"
futures-util = "0.3"
governor = "0.10"
libmpv2 = "5.0"
log = "0.4"
once_cell = "1.21"
psl = "2.1"
raw-window-handle = "0.6"  
reqwest = { version = "0.12", features = ["stream", "json"] }
regex = "1.12"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
scopeguard = "1.2"
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "json", "runtime-tokio-native-tls"] }
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-prevent-default = { version = "4", features = ["platform-windows"] }
tauri-plugin-dialog = "2"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
url = "2.5"
wasmtime = "44.0"


[dev-dependencies]

